# preexplorer

./: .gitignore  Cargo.toml  Changelog.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  To do.md
.github/workflows/: main.yml  rust.yml
data/: 1.txt  1_0.txt  1_1.txt  2.txt  2_0.txt  2_1.txt  2_2.txt  9.txt  my_plot_serie_name.txt  my_serie_name.txt  my_serie_name_0.txt  my_serie_name_1.txt  my_serie_name_2.txt
examples/: README.md  basic.rs  data.rs  data_basic.rs  density.rs  density_comparison.rs  distribution.rs  distribution_basic.rs  distribution_comparison.rs  iteration_comparison.rs  process.rs  process_basic.rs  process_comparison.rs  sequence.rs  sequence_basic.rs  sequence_comparison.rs  sequence_with_error.rs
examples/contour/: main.rs
examples/data/: main.rs
examples/densities/: main.rs
examples/density/: main.rs
examples/heatmap/: main.rs
examples/heatmaps/: main.rs
examples/process/: main.rs
examples/process_bin/: main.rs
examples/process_bins/: main.rs
examples/process_error/: main.rs
examples/process_errors/: main.rs
examples/process_violin/: main.rs
examples/process_violins/: main.rs
examples/processes/: main.rs
examples/sequence/: main.rs
examples/sequence_bin/: main.rs
examples/sequence_bins/: main.rs
examples/sequence_error/: main.rs
examples/sequence_errors/: main.rs
examples/sequence_violin/: main.rs
examples/sequence_violins/: main.rs
examples/sequence_with_error/: main.rs
examples/sequences/: main.rs
examples/ternaries/: main.rs
examples/ternary/: main.rs
plots/: 1.gnu  1_0.gnu  1_1.gnu  2.gnu  2_0.gnu  2_1.gnu  2_2.gnu  my_plot_serie_name.gnu  my_serie_name.gnu  my_serie_name_0.gnu  my_serie_name_1.gnu  my_serie_name_2.gnu
src/: configuration.rs  contour.rs  data.rs  density.rs  distribution.rs  errors.rs  iteration.rs  lib.rs  main.rs  matrix.rs  process.rs  sequence.rs  ternary.rs  traits.rs
src/configuration/: plot.rs  save.rs
src/configuration/plot/: style.rs
src/density/: comparison.rs
src/distribution/: comparison.rs
src/iteration/: comparison.rs
src/matrix/: comparison.rs
src/process/: bin.rs  comparison.rs  error.rs  violin.rs
src/process/error/: comparison.rs
src/process/violin/: comparison.rs
src/sequence/: bin.rs  comparison.rs  error.rs  violin.rs
src/sequence/error/: comparison.rs
src/sequence/violin/: comparison.rs
src/ternary/: comparison.rs
