[package]
name = "preexplorer"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rasa200/markovian"
# documentation = "https://rust-random.github.io/rand/"
# homepage = "https://crates.io/crates/rand"
description = """
Easy plotter and saver of simple data. Handy tool for development stage or small computational projects.
"""
keywords = ["visualization", "plotting"]
categories = ["Visualization", "Science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
chrono = "0.4.10"

[dev-dependencies]
ndarray = "0.13"
