[package]
name = "preexplorer"
version = "0.4.2"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/saona-raimundo/preexplorer"
documentation = "https://docs.rs/preexplorer"
homepage = "https://crates.io/crates/preexplorer"
description = """
Easy plotter and saver of simple data. Handy tool for development stage or small computational projects.
"""
keywords = ["visualization", "plotting"]
categories = ["visualization", "science", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4"
thiserror = "1.0"
getset = "0.1"
average = "0.10.4"
ndarray = "0.13"
# serde = { version = "1.0", optional = true, features = ["derive"] }
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21.1"

[dev-dependencies]
rand = "0.7"
itertools = "0.9"
rand_distr = "0.2"
anyhow = "1.0"
ron = "0.6.4"
